# ZyraCrypt

./: .gitignore  .replit  COMPREHENSIVE_CODE_ANALYSIS.md  LICENSE  README.md  README_AR.md  __init__.py  app.py  corrected_comprehensive_test.py  key_store.json  pyproject.toml  replit.md  requirements.txt  setup.cfg  setup.py  test_advanced_features.py  test_encryption_system.py  test_enhanced_crypto_system.py  test_library.py  test_new_features.py
advanced_features/: homomorphic_encryption_placeholder.py  secure_multi_party_computation_placeholder.py
docs/: CONTRIBUTING.md  EXAMPLES.md  FAQ.md  TROUBLESHOOTING.md  installation.md  security.md  user_guide.md
docs/examples/: README.md  key_management.py
key_management/: __init__.py
src/: __init__.py
src/core_cryptography/: __init__.py
tests/: testAll.py  test_data_protection.py  test_key_management.py  test_specialized_security.py
zyracrypt/: __init__.py  build_protected.py  cli.py  setup.py
zyracrypt/encryption_system/: requirements.txt
zyracrypt/encryption_system/docs/: CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  MIGRATION.md  PERFORMANCE.md  ROADMAP.md  TROUBLESHOOTING.md  api.md  developer_guide.md
zyracrypt/encryption_system/docs/examples/: api_usage.py  basic_encryption.py  performance_benchmarks.py  post_quantum_examples.py
zyracrypt/encryption_system/src/advanced_features/: __init__.py  threshold_cryptography_placeholder.py  white_box_cryptography_placeholder.py
zyracrypt/encryption_system/src/data_protection/: __init__.py
zyracrypt/encryption_system/tests/: test_advanced_features.py  test_core_cryptography.py
zyracrypt/zyracrypt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
